kubernetes_files/my-angular-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-angular-app
  namespace: php-rest-api
  labels:
    app: my-angular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-angular-app
  template:
    metadata:
      labels:
        app: my-angular-app
    spec:
      containers:
      - name: my-angular-app
        image: freddyiw/my-angular-app-k8s:latest
        ports:
        - containerPort: 80
