kubernetes_files/my-angular-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-angular-app-service
  namespace: php-rest-api
spec:
  selector:
    app: my-angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
