kubernetes_files/php-apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache-service
  namespace: php-rest-api
spec:
  selector:
    app: php-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
