kubernetes_files/my-angular-app-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-angular-app-ingress
  namespace: php-rest-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
#  - host: petclinic.example.com   # Replace this with your domain or IP if not using a domain
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-angular-app-service
            port:
              number: 80
