kubernetes_files/my-angular-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-angular-app-ingress
  namespace: my-angular-app
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix-traefik-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /my-angular-app
        pathType: Prefix
        backend:
          service:
            name: my-angular-app-service
            port:
              number: 80
